<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.AddItemFragment">

    tools:context=".view.fragments.WelcomeFragment"
    <ImageView
        android:id="@+id/item_card_img"
        android:layout_width="360dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/img"
        android:minHeight="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_add" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginRequestTextInputLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="50dp"
        app:layout_constraintTop_toBottomOf="@id/item_card_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/hint_add_name"
            android:textSize="17sp"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/loginRequestTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_add_numbers"
            android:textSize="17sp"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirmTextInputLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_add_location"
            android:textSize="17sp"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_height="63dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/passwordConfirmTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:textAllCaps="true"
        android:text="@string/btn_add_item"
        app:cornerRadius="50dp"
        android:textSize="17sp">
    </com.google.android.material.button.MaterialButton>



</androidx.constraintlayout.widget.ConstraintLayout>
